--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 <head>
     <title>Colby T. Dobson</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stylesheets/base.css">
+    <link rel="stylesheet" href="/styles/base.css">
 </head>
 <body>
 {{{body}}}
