--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,4 @@
-<p>Hello there!</p>
+<h2>Hello there!</h2>
+<a href="/login">Login</a>
+<a href="/register">Register</a>
+<a href="/logout">Logout</a>
