--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -14,3 +14,32 @@ a:hover {
     cursor: pointer;
 }
 
+input {
+    border: 2px solid #416680;
+    background-color: #ABABAB;
+    color: #302E31;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+
+input[type="button"]:active {
+    background-color: #416680;
+}
+
+input[type="button"]:hover {
+    cursor: pointer;
+}
+
+.warning-container {
+    font-size: 16pt;
+    height: 16pt;
+}
+
+.submit-btn {
+    border: 2px solid #553976;
+    background-color: #8853C7;
+    font-size: 16pt;
+    margin: 5px 0;
+    padding: 5px 10px;
+    width: 12em;
+}
