--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,2 @@
 <h2>Hello there!</h2>
-<a href="/login">Login</a>
-<a href="/register">Register</a>
-<a href="/logout">Logout</a>
+<a href="/journey">My Journey</a>
