--- a/views/journey.hbs
+++ b/views/journey.hbs
@@ -1,2 +1,4 @@
-<h1>We're in it for the long haul</h1>
+{{#if isAdmin}}
+    <input type="button" class="submit-btn top-right" id="new-post" value="New Post" onclick="window.location = '/createPost'">
+{{/if}}
 <a href="/logout">Logout</a>
