--- a/views/journey.hbs
+++ b/views/journey.hbs
@@ -1,4 +1,3 @@
 {{#if isAdmin}}
-    <input type="button" class="submit-btn top-right" id="new-post" value="New Post" onclick="window.location = '/createPost'">
+    <input type="button" class="submit-btn top-center" id="new-post" value="New Post" onclick="window.location = '/createPost'">
 {{/if}}
-<a href="/logout">Logout</a>
