--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,3 +1,7 @@
 <div class="nav-bar">
-
+    <h1><a href="/" class="plain-text">Colby T. Dobson</a></h1>
+    <div class="nav-links">
+        <a href="/login">Login</a>
+        <a href="/logout">Logout</a>
+    </div>
 </div>
