--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -74,8 +74,32 @@ textarea {
     margin-top: 1em
 }
 
-.top-right {
+.top-center {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 50%;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    height: 50px;
+    padding: 0 10px;
+}
+
+.nav-links {
+    display: flex;
+    gap: 10px;
+}
+
+.plain-text {
+    color: #C8C8C8;
+    text-decoration: none;
+}
+
+.plain-text:hover {
+    text-decoration: none;
+    cursor: default;
 }
