--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,2 +1,13 @@
-<h2>Hello there!</h2>
-<a href="/journey">My Journey</a>
+<div class="grid-container">
+    <div class="header">
+        <h2>
+            WELCOME<br>
+            TO<br>
+            MY<br>
+            PORTFOLIO
+        </h2>
+    </div>
+    <div class="links">
+        <a href="/journey" class="main-link">MY JOURNEY</a>
+    </div>
+</div>
