Implemented viewing posts

--- a/views/journey.hbs
+++ b/views/journey.hbs
@@ -1,3 +1,4 @@
 {{#if isAdmin}}
     <input type="button" class="submit-btn top-center" id="new-post" value="New Post" onclick="window.location = '/createPost'">
 {{/if}}
+<div id="post-container"></div>
