--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,5 +9,7 @@
     </div>
     <div class="links">
         <a href="/journey" class="main-link">MY JOURNEY</a>
+        <a href="/resume" class="main-link">MY RESUME</a>
+        <a href="/projects" class="main-link">MY PROJECTS</a>
     </div>
 </div>
