--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,7 @@
 <head>
     <title>Colby T. Dobson</title>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/styles/base.css">
     {{#if style}}
         <link rel="stylesheet" href="{{style}}">
