--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<div class="footer-container">
+<div class="footer-container" id="footer">
     <hr>
     <div class="footer">
         <p>colbytdobson@gmail.com</p>
