--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<div class="nav-bar">
+<div class="nav-bar" id="navbar">
     <h1><a href="/" class="plain-text"><img src="/images/headshot.png" width="40px" height="40px" alt="Headshot"> Colby T. Dobson</a></h1>
     <div class="nav-links">
         <a href="/login">Login</a>
