--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,15 +1,15 @@
 <div class="grid-container">
     <div class="header">
-        <h2>
+        <h2 class="h-gradient">
             WELCOME<br>
             TO<br>
             MY<br>
             PORTFOLIO
         </h2>
     </div>
-    <div class="links">
-        <a href="/journey" class="main-link">MY JOURNEY</a>
-        <a href="/resume" class="main-link">MY RESUME</a>
-        <a href="/projects" class="main-link">MY PROJECTS</a>
+    <div class="links" id="links">
+        <a href="/journey" class="link b-gradient test-transform">MY JOURNEY</a>
+        <a href="/resume" class="link b-gradient">MY RESUME</a>
+        <a href="/projects" class="link b-gradient">MY PROJECTS</a>
     </div>
 </div>
