--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -14,15 +14,50 @@ h2 {
 
 .grid-container > div.header {
     grid-area: header;
-    font-size: 6vw;
+    font-size: 5vw;
 }
 
 .grid-container > div.links {
     grid-area: links;
     text-align: right;
-    font-size: 6vw;
+    font-size: 5vw;
 }
 
-.main-link:hover {
+.link:hover {
     text-decoration: none;
+}
+
+.h-gradient {
+    background-image: linear-gradient(to left, #AE9F76 0%, #121212 300%);
+    background-clip: text;
+    color: transparent;
+}
+
+.b-gradient {
+    background-image: linear-gradient(to right, #121212, #AE9F76);
+
+    -webkit-background-clip: text;
+    background-clip: text;
+
+    color: transparent;
+
+    background-size: 200% 100%;
+    background-position-x: -6vw;
+    transition: background-size 0.5s, background-position 0.5s;
+}
+
+.b-gradient:hover {
+    background-size: 500% 100%;
+    background-position-x: 0;
+}
+
+.links {
+    transition: transform 0.2s ease-out;
+}
+
+.link {
+    display: block;
+    will-change: transform;
+    transform-origin: right;
+    padding-bottom: 1vh;
 }
