--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,15 +1,8 @@
-<div class="grid-container">
-    <div class="header">
-        <h2 class="h-gradient">
-            WELCOME<br>
-            TO<br>
-            MY<br>
-            PORTFOLIO
-        </h2>
+<div class="container">
+    <div class="box">
+        <p>Hello1</p>
     </div>
-    <div class="links" id="links">
-        <a href="/journey" class="link b-gradient test-transform">MY JOURNEY</a>
-        <a href="/resume" class="link b-gradient">MY RESUME</a>
-        <a href="/projects" class="link b-gradient">MY PROJECTS</a>
+    <div class="box">
+        <p>Hello2</p>
     </div>
 </div>
