--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="box">
-        <p>Hello1</p>
+        Hello1
     </div>
     <div class="box">
-        <p>Hello2</p>
+        Hello2
     </div>
 </div>
