--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,9 +1,9 @@
-<div class="container center">
-    <div class="box">
+<div class="project-container center">
+    <div class="project-button">
         <h1>Serve Receive Tracker</h1>
         <p>Efficient volleyball stats tracker to record serve receive and serving scores</p>
     </div>
-    <div class="box">
+    <div class="project-button">
         <h1>Dynamic Resume Generator</h1>
         <p>Generates job-listing specific resumes from your entire history</p>
     </div>
