--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,9 +1,12 @@
-.container {
+.project-container {
     display: flex;
 }
 
-.box {
+.project-button {
     flex: 1;
     padding: 10px;
+    margin: 10px;
     border: 1px solid black;
+    border-radius: 5px;
+    background-color: #3F6CAD;
 }
