--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -9,6 +9,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    margin: 30px 0;
     padding: 10px;
     border: 1px solid black;
     border-radius: 5px;
