--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,6 +1,6 @@
 .project-container {
     display: flex;
-    gap: 2px;
+    gap: 5%;
     justify-content: center;
     align-items: stretch;
 }
@@ -9,7 +9,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    margin: 2% 6%;
+    margin: 3% 0;
+    width: 30%;
     padding: 10px;
     border: 1px solid black;
     border-radius: 5px;
