--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,9 +2,11 @@
     <div class="project-button">
         <h1>Serve Receive Tracker</h1>
         <p>Efficient volleyball stats tracker to record serve receive and serving scores</p>
+        <p>Created for the teams I coach and play for because I wasn't able to find an easy way to track improvement</p>
     </div>
     <div class="project-button">
         <h1>Dynamic Resume Generator</h1>
         <p>Generates job-listing specific resumes from your entire history</p>
+        <p>Created to improve the quality of my applications without spending extensive time hand tailoring my resume</p>
     </div>
 </div>
