--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,12 +1,12 @@
 <div class="project-container center">
-    <div class="project-button">
-        <h1>Serve Receive Tracker</h1>
-        <p>Efficient volleyball stats tracker to record serve receive and serving scores</p>
-        <p>Created for the teams I coach and play for because I wasn't able to find an easy way to track improvement</p>
-    </div>
-    <div class="project-button">
-        <h1>Dynamic Resume Generator</h1>
-        <p>Generates job-listing specific resumes from your entire history</p>
-        <p>Created to improve the quality of my applications without spending extensive time hand tailoring my resume</p>
-    </div>
+    <button class="project-button">
+        <span class="button-title">Serve Receive Tracker</span>
+        <span class="button-description">Efficient volleyball stats tracker to record serve and serve receive scores</span>
+        <span class="button-detail">Created for the teams I coach and play for because I wasn't able to find an easy way to track improvement</span>
+    </button>
+    <button class="project-button">
+        <span class="button-title">Dynamic Resume Generator</span>
+        <span class="button-description">Generates job-listing specific resumes from your entire history</span>
+        <span class="button-detail">Created to improve the quality of my applications without spending extensive time hand tailoring my resume</span>
+    </button>
 </div>
