--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,6 +1,7 @@
 .project-button {
     text-align: center; /* Center-align the button content */
     padding: 20px; /* Add padding inside buttons */
+    align-items: stretch; /* Ensure buttons are the same height */
     background-color: #3F6CAD;
     color: white;
     border: none;
@@ -10,7 +11,6 @@
     transition: background-color 0.3s ease;
     display: flex; /* Flex layout for vertical stacking */
     flex-direction: column; /* Stack content vertically */
-    align-items: center; /* Center-align content */
 }
 
 .button-title {
