--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -39,7 +39,7 @@
 }
 
 .project-button:active {
-    background-color: #6D64D8; /* Darker color on click */
+    background-color: #1F3C6A; /* Darker color on click */
     transform: scale(0.98); /* Slight scale-down effect on click */
 }
 
