--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,6 +1,6 @@
 html {
     font-family: sans-serif;
-    color: #C8C8C8;
+    color: #DCEFFF;
     background-color: #121212;
 }
 
@@ -94,7 +94,7 @@ textarea {
 }
 
 .plain-text {
-    color: #C8C8C8;
+    color: #DCEFFF;
     text-decoration: none;
 }
 
