--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,7 +6,7 @@
     </button>
     <button class="project-button">
         <span class="button-title">Dynamic Resume Generator</span>
-        <span class="button-description">Generates job-listing specific resumes from your entire history</span>
+        <span class="button-description">Generates job-listing specific resumes from your provided history</span>
         <span class="button-detail">Created to improve the quality of my applications without spending extensive time hand tailoring my resume</span>
     </button>
 </div>
