--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Colby T. Dobson</title>
+    {{#if title}}
+        <title>{{title}}</title>
+    {{else}}
+        <title>Colby T. Dobson</title>
+    {{/if}}
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <link rel="stylesheet" href="/styles/base.css">
