--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,10 +1,12 @@
 <div class="project-container center">
     <button class="project-button" onclick="window.location.href='/servereceive';">
+        <img src="/images/volleyball-icon.png" alt="Volleyball Icon" class="button-image">
         <span class="button-title">Serve Receive Tracker</span>
         <span class="button-description">Efficient volleyball stats tracker to record serve and serve receive scores</span>
         <span class="button-detail">Created for the teams I coach and play for because I wasn't able to find an easy way to track improvement</span>
     </button>
     <button class="project-button" onclick="window.location.href='/dynamicresume';">
+        <img src="/images/resume-icon.png" alt="Resume Icon" class="button-image">
         <span class="button-title">Dynamic Resume Generator</span>
         <span class="button-description">Generates job-listing specific resumes from your provided history</span>
         <span class="button-detail">Created to improve the quality of my applications without spending extensive time hand tailoring my resume</span>
