--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -59,8 +59,8 @@
 }
 
 .button-image {
-    width: auto; /* Adjust size */
-    height: 80px; /* Maintain aspect ratio */
+    width: auto;
+    height: 100px;
     margin-bottom: 15px;
 }
 
