--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -14,14 +14,13 @@ a:hover {
 }
 
 .nav-bar {
-    position: relative; /* Default positioning */
-    top: 0; /* Ensures it starts from the top */
-    left: 0; /* Ensures it starts from the left edge */
-    width: 100%; /* Spans the entire width of the viewport */
-    height: 50px; /* Adjust the height as needed */
-    padding: 0 10px; /* Optional padding */
-    background-color: #191919; /* Keeps your background color */
-    z-index: 1; /* Ensures it stays above other content */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    padding: 0 10px;
+    background-color: #191919;
 }
 
 .nav-links {
