--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -14,12 +14,14 @@ a:hover {
 }
 
 .nav-bar {
+    top: 0; /* Ensure it starts at the top */
+    left: 0; /* Ensure it spans the left edge */
+    width: 100%; /* Full width across the viewport */
+    height: 50px; /* Adjust height as needed */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 50px;
-    padding: 0 10px;
+    padding: 0 20px;
     background-color: #191919;
 }
 
