--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -29,7 +29,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 10px;
     background-color: #191919;
 }
 
@@ -51,6 +51,7 @@ a:hover {
 .footer {
     width: 95%;
     height: 20px;
+    padding: 10px;
 }
 
 .center {
