--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,8 @@
 <div class="nav-bar" id="navbar">
-    <h1><a href="/" class="plain-text"><img src="/images/favicon.svg" width="40px" height="40px" alt="Headshot"> Colby T. Dobson</a></h1>
+    <div class="logo">
+        <h1><img src="/path/to/profile-pic.jpg" alt="Profile Picture">
+        <span>Colby T. Dobson</span></h1>
+    </div>
     <div class="nav-links">
         <a href="/login" id="login">Login</a>
         <a href="/logout" id="logout">Logout</a>
