--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <div class="nav-bar" id="navbar">
     <div class="logo">
-        <h1><img src="/path/to/profile-pic.jpg" alt="Profile Picture">
+        <h1><img src="/images/favicon.svg" alt="Headshot">
         <span>Colby T. Dobson</span></h1>
     </div>
     <div class="nav-links">
