--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <div class="nav-bar" id="navbar">
     <div class="logo">
         <img src="/images/favicon.svg" alt="Headshot">
-        <span>Colby T. Dobson</span>
+        <h1>Colby T. Dobson</h1>
     </div>
     <div class="nav-links">
         <a href="/login" id="login">Login</a>
