--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,6 +1,8 @@
 <div class="nav-bar" id="navbar">
-    <div class="logo">
-        <img src="/images/favicon.svg" alt="Headshot">
-        <h1>Colby T. Dobson</h1>
-    </div>
+    <a href="/">
+        <div class="logo">
+            <img src="/images/favicon.svg" alt="Headshot">
+            <h1>Colby T. Dobson</h1>
+        </div>
+    </a>
 </div>
