--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <div class="nav-bar" id="navbar">
-    <a href="/">
+    <a href="/" class="plain-text">
         <div class="logo">
             <img src="/images/favicon.svg" alt="Headshot">
             <h1>Colby T. Dobson</h1>
