--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-family: sans-serif;
     color: #DCEFFF;
@@ -24,7 +28,7 @@ a:hover {
 .nav-bar {
     top: 0; /* Ensure it starts at the top */
     left: 0; /* Ensure it spans the left edge */
-    width: 95%; /* Full width across the viewport */
+    width: 100%; /* Full width across the viewport */
     height: 50px; /* Adjust height as needed */
     display: flex; /* Use flexbox for layout */
     justify-content: space-between; /* Space out content (e.g., left logo, right links) */
