--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -6,7 +6,6 @@ html {
     font-family: sans-serif;
     color: #DCEFFF;
     background-color: #121212;
-    overflow-y: hidden; /* Disables vertical scrolling */
 }
 
 body {
@@ -32,7 +31,7 @@ h1 {
 }
 
 .nav-bar {
-    top: 0; /* Ensure it starts at the top */
+    top: -1000px; /* Ensure it starts at the top */
     left: 0; /* Ensure it spans the left edge */
     width: 100%; /* Full width across the viewport */
     display: flex; /* Use flexbox for layout */
