--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,8 +1,10 @@
-<div class="nav-bar" id="navbar">
-    <a href="/" class="plain-text">
-        <div class="logo">
-            <img src="/images/favicon.svg" alt="Headshot">
-            <h1>Colby T. Dobson</h1>
-        </div>
-    </a>
+<div class="nav-wrapper">
+    <div class="nav-bar" id="navbar">
+        <a href="/" class="plain-text">
+            <div class="logo">
+                <img src="/images/favicon.svg" alt="Headshot">
+                <h1>Colby T. Dobson</h1>
+            </div>
+        </a>
+    </div>
 </div>
