--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -41,15 +41,13 @@ h1 {
     background-color: #191919; /* Background color of the navbar */
 }
 
-.nav-bar::before {
-    content: ""; /* Create a pseudo-element */
-    position: absolute;
-    top: -1000px; /* Extend background upwards */
-    left: 0;
-    width: 100%; /* Match the navbar width */
-    height: 1000px; /* Height of the background extension */
-    background-color: #191919; /* Same background color as the navbar */
-    z-index: -1; /* Place it behind the navbar content */
+.nav-wrapper {
+    position: relative;
+    background-color: #191919; /* Same as navbar background */
+    width: 100%;
+    height: 1000px; /* Extend the background upward */
+    top: -900px; /* Move it up to extend past the top */
+    z-index: -1; /* Place it behind other elements */
 }
 
 .logo {
