--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -13,6 +13,25 @@ body {
     background-color: #121212;
 }
 
+.container {
+    display: flex;
+    flex-direction: column; /* Stack elements vertically */
+    min-height: 100vh; /* Ensure container spans the full height of the viewport */
+}
+
+.main {
+    flex: 1; /* Take up remaining space to push footer to the bottom */
+}
+
+.footer {
+    height: 50px; /* Adjust height as needed */
+    background-color: #191919; /* Footer background */
+    color: #DCEFFF; /* Footer text color */
+    display: flex;
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+}
+
 button:hover {
     cursor: pointer;
 }
