--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,3 @@
-<div class="footer-container" id="footer">
-    <div class="footer">
-        <p>colbytdobson@gmail.com</p>
-    </div>
+<div class="footer" id="footer">
+    <p>colbytdobson@gmail.com</p>
 </div>
