--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -13,6 +13,10 @@ body {
     background-color: #121212;
 }
 
+.placeholder {
+    flex: 1;
+}
+
 .container {
     display: flex;
     flex-direction: column; /* Stack elements vertically */
