--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,4 +5,10 @@
             <h1>Colby T. Dobson</h1>
         </div>
     </a>
+    <div id="login-container">
+        <div id="login-button" style="display: none;"></div>
+        <div id="logout-button" style="display: none;">
+            <a onclick="logout()">Logout</a>
+        </div>
+    </div>
 </div>
