--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -6,8 +6,8 @@
         </div>
     </a>
     <div id="login-container">
-        <div id="login-button" style="display: none;"></div>
-        <div id="logout-button" style="display: none;">
+        <div id="login-div" style="display: none;"></div>
+        <div id="logout-div" style="display: none;">
             <a onclick="logout()">Logout</a>
         </div>
     </div>
