--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -34,7 +34,9 @@
         {{{body}}}
     </div>
     {{#if loginRequired}}
-        <div class="placeholder" id="placeholder"></div>
+        <div class="placeholder" id="placeholder">
+            <h1>Please sign in to use this page</h1>
+        </div>
     {{/if}}
     {{> footer}}
 </div>
