--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,7 @@
     <script src="/scripts/login.js"></script>
     {{#if loginRequired}}
         <style>
-            #main {
+            #main, #placeholder {
                 display: none;
             }
         </style>
