--- a/views/servereceiveHome.hbs
+++ b/views/servereceiveHome.hbs
@@ -13,8 +13,8 @@
 <form id="createTeamForm">
   <label for="createTeam">Team Name:</label>
   <input type="text" id="createTeam" name="createTeam" required><br><br>
-  <label for="createPlayer">First Player:</label>
-  <input type="text" id="createPlayer" name="createPlayer" required><br><br>
+<!--   <label for="createPlayer">First Player:</label> -->
+<!--   <input type="text" id="createPlayer" name="createPlayer" required><br><br> -->
   <button type="submit">Create</button>
 </form>
 <div id="createResult" style="display: none;"></div>
