--- a/views/servereceiveHome.hbs
+++ b/views/servereceiveHome.hbs
@@ -1,13 +1,4 @@
-<h1>Serve Receive Stats</h1>
-<p>Caution, any data you enter is NOT private. All team data is accessible and editable with the team name.</p>
-
-<h2>Go to existing team:</h2>
-<form id="teamForm">
-  <label for="team">Enter Team:</label>
-  <input type="text" id="team" name="team" required>
-  <button type="submit">Go</button>
-</form>
-<div id="result" style="display: none;"></div>
+<h1>Serve Receive Tracker</h1>
 
 <h2>Create new team:</h2>
 <form id="createTeamForm">
@@ -18,3 +9,6 @@
   <button type="submit">Create</button>
 </form>
 <div id="createResult" style="display: none;"></div>
+
+<h2>My Teams:</h2>
+<div id="result" style="display: none;"></div>
