--- a/views/servereceiveHome.hbs
+++ b/views/servereceiveHome.hbs
@@ -3,12 +3,13 @@
 <h2>Create new team:</h2>
 <form id="createTeamForm">
   <label for="createTeam">Team Name:</label>
-  <input type="text" id="createTeam" name="createTeam" required><br><br>
+  <input type="text" id="createTeam" name="createTeam" required>
 <!--   <label for="createPlayer">First Player:</label> -->
 <!--   <input type="text" id="createPlayer" name="createPlayer" required><br><br> -->
   <button type="submit">Create</button>
 </form>
 <div id="createResult" style="display: none;"></div>
 
+<br>
 <h2>My Teams:</h2>
 <div id="result" style="display: none;"></div>
