--- a/views/servereceiveHome.hbs
+++ b/views/servereceiveHome.hbs
@@ -2,8 +2,7 @@
 
 <h2>Create new team:</h2>
 <form id="createTeamForm">
-  <label for="createTeam">Team Name:</label>
-  <input type="text" id="createTeam" name="createTeam" required>
+  <input type="text" id="createTeam" name="createTeam" placeholder="Enter team name..." required>
 <!--   <label for="createPlayer">First Player:</label> -->
 <!--   <input type="text" id="createPlayer" name="createPlayer" required><br><br> -->
   <button type="submit">Create</button>
