--- a/views/servereceiveHome.hbs
+++ b/views/servereceiveHome.hbs
@@ -1,7 +1,7 @@
 <h1>Serve Receive Tracker</h1>
 
 <form id="createTeamForm">
-    <label for="createTeam">Create new team:</label>
+    <label for="createTeam">Create new team:</label><br>
   <input type="text" id="createTeam" name="createTeam" placeholder="Enter team name..." required>
 <!--   <label for="createPlayer">First Player:</label> -->
 <!--   <input type="text" id="createPlayer" name="createPlayer" required><br><br> -->
